gccida/c3/gen_call
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_call/src/insn-emit.c:14701:49: error: use of undeclared identifier 'machine_mode'
if ( call_insn_operand( operand0->fld[0].rtx, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)) ) 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_call/src/insn-emit.c:14709:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_call/src/obj/insn-emit.o] Error 1
